syntax = "proto3";

package types;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "payload.proto";
import "program.proto";


message UnsignedTx {
	Payload   Payload    = 1;
	uint64    Nonce      = 2;
	int64     Fee        = 3;
	bytes     Attributes = 4;
}


message MsgTx {
    UnsignedTx          UnsignedTx = 1;
    repeated Program    Programs   = 2;
}

